--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <title>Document</title>
+  <title>Ticking Clock</title>
 </head>
 
 <body>
@@ -27,6 +27,7 @@
     <div class="handle handle__second"></div>
     <div class="handle handle__hour"></div>
     <div class="handle handle__minute"></div>
+    <div class="handle handle__center"></div>
   </div>
   
   <script src="app.js"></script>
